--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:172.31.22.43:9000/</sonar.host.url>
+		<sonar.host.url>http://54.235.18.10:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://18.209.7.102:8081/repository/ebay-bts-release/</url>
+	      <url>http://54.160.150.74:8081/repository/ebay-BTS-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://18.209.7.102:8081/repository/ebay-bts-snapshot/</url>
+	      <url>http://54.160.150.74:8081/repository/ebay-BTS-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
